<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.view.auth.RegisterFragment">

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/register_text"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <!-- Input Fields -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints="username"
            android:background="@drawable/et_rounded_input"
            android:hint="@string/username_text"
            android:inputType="text"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"/>

        <EditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/et_rounded_input"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"/>

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/et_rounded_input"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="60dp">

        <!-- Register Button -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lavender"
            android:paddingVertical="6dp"
            android:text="@string/register_text"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:cornerRadius="16dp" />

        <ProgressBar
            android:id="@+id/pb_register"
            style="@android:style/Widget.Material.ProgressBar.Small"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />
    </FrameLayout>


    <!-- Redirect to Login -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_redirect_to_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_switch_to_login"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:textColor="@color/biru_langit"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>