<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".ui.view.home.AccountFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/comfortaa"
        android:text="Account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        tools:ignore="HardcodedText" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <LinearLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_value_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_chevron_right"
            app:tint="#818181" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" /> <!-- Space with 10dp gap -->

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/email_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_value_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_chevron_right"
            app:tint="#818181" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" /> <!-- Space with 10dp gap -->

    <LinearLayout
        android:id="@+id/layout_jenis_kelamin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_jenis_kelamin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jenis_kelamin_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_value_jenis_kelamin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"

            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_chevron_right"
            app:tint="#818181" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" /> <!-- Space with 10dp gap -->

    <LinearLayout
        android:id="@+id/layout_umur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_umur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_umur"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_value_umur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"

            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_chevron_right"
            app:tint="#818181" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" /> <!-- Space with 10dp gap -->

    <LinearLayout
        android:id="@+id/layout_smoking_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_smoking_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Seorang Perokok?"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_value_smoking_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"

            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_chevron_right"
            app:tint="#818181" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" /> <!-- Space with 10dp gap -->

    <LinearLayout
        android:id="@+id/layout_frekuensi_olahraga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_frekuensi_olahraga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Frekuensi Olahraga"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_value_frekuensi_olahraga"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"

            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_chevron_right"
            app:tint="#818181" />

    </LinearLayout>

</LinearLayout>